Stitchfair first eddition

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
-        "lucide-vue-next": "^0.469.0"
+        "lucide-vue-next": "^0.469.0",
+        "three": "^0.172.0",
+        "vue-advanced-cropper": "^2.8.9"
     }
 }
