--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "mtownsend/remove-bg": "^2.0",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
